--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     </header>
     <section class="main">
       <img src="imgs/stars1.webp" id="stars" alt="stars" />
-      <h2 class="name">NODY</h2>
+      <h2 class="name">7ODA</h2>
       <img src="imgs/moon2.webp" id="moon" alt="moon" />
       <img src="imgs/mountains3.webp" id="mountains3" alt="mountains" />
       <img src="imgs/mountains4.webp" id="mountains4" alt="mountains" />
